--- a/style.css
+++ b/style.css
@@ -1,5 +1,85 @@
-.canvas {
-  position: fixed;
-  top: 0;
-  left: 0;
+html, body {
+  margin: 0;
+  height: 100%;
+  font-family: Arial, sans-serif;
+  color: var(--text-color);
+  background: var(--background-color);
+  overflow: hidden;
+  transition: background 0.3s, color 0.3s;
+  font-family: 'Roboto', sans-serif;
+}
+
+#c {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: block;
+  z-index: -1;
+}
+
+#theme-toggle {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  padding: 10px 20px;
+  background: var(--button-background);
+  color: var(--button-color);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  z-index: 1;
+  transition: background 0.3s, color 0.3s;
+}
+
+main {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  /* background-color: var(--main-background); */
+  padding: 20px;
+  border-radius: 10px;
+}
+
+header h1 {
+  font-size: 2.5em;
+  margin: 0;
+}
+
+header h2 {
+  font-size: 1.2em;
+  margin: 10px 0 20px 0;
+}
+
+.intro, .contact {
+  margin: 20px 0;
+}
+
+a {
+  color: var(--link-color);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/* Dark mode variables */
+body.dark {
+  --background-color: rgb(30, 30, 30);
+  --text-color: white;
+  --main-background: rgba(0, 0, 0, 0.7);
+}
+
+body.light {
+  --background-color: white;
+  --text-color: rgb(30, 30, 30);
+  --main-background: rgba(0, 0, 0, 0.7);
+}
+
+.indie-flower-regular {
+  font-family: "Indie Flower", cursive;
+  font-weight: 300;
+  font-style: oblique;
 }
