--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Global Style */
+
 html, body {
   margin: 0;
   height: 100%;
@@ -8,6 +10,18 @@ html, body {
   transition: background 0.3s, color 0.3s;
 }
 
+body.dark .icon {
+  filter: invert(1) hue-rotate(180deg) brightness(0.8);
+}
+
+button, li {
+  padding: 10px 20px;
+  background: transparent;
+  color: var(--button-color);
+  border: none;
+  cursor: pointer;
+}
+
 #c {
   position: absolute;
   width: 100%;
@@ -16,36 +30,45 @@ html, body {
   z-index: -1;
 }
 
-/* Header Bar */
+/* Bars */
 
-.header-bar {
+.horizontal-bar {
   width: 100%;
-  position: absolute;
+  position: relative;
   display: flex;
   gap: 10px;
 }
 
-.controls {
+.button-container {
   top: 20px;
   right: 20px;
   width: 100%;
   display: flex;
+  justify-content: center;
+}
+
+/* Bar content */
+
+#social-icons {
+  width: 100%;
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+  justify-content: left;
+}
+
+#controls {
   justify-content: right;
 }
 
-.controls > * {
+#controls > * {
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-size: calc(0.7vw + 8px);
   font-style: normal;
 }
 
-.social-icons {
-  width: 100%;
-  display: flex;
-  justify-content: left;
-  background: none;
-  gap: 20px;
+#home-bar {
   padding: 20px;
 }
 
@@ -55,49 +78,30 @@ html, body {
 }
 
 .icon {
-  width: 40px; /* Default size */
-  height: 40px; /* Maintain aspect ratio */
+  width: 40px;
+  height: 40px;
   display: block;
   transition: transform 0.3s, opacity 0.3s;
 }
 
 .icon-link:hover .icon {
-  transform: scale(1.1); /* Slightly enlarge the icon on hover */
-  opacity: 0.8; /* Slightly fade the icon on hover */
+  transform: scale(1.1); 
+  opacity: 0.8; 
 }
 
 @media (max-width: 600px) {
   .icon {
-      width: 30px; /* Smaller size for small screens */
+      width: 30px;
       height: 30px;
   }
 }
 
-body.dark .icon {
-  filter: invert(1) hue-rotate(180deg) brightness(0.8);
-}
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-/* End of Header Bar */
-
-#theme-toggle, #language-toggle {
-  padding: 10px 20px;
-  background: transparent;
-  color: var(--button-color);
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-main {
-  position: absolute;
-  width: 80%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   text-align: center;
-  /* background-color: var(--main-background); */
-  padding: 20px;
-  border-radius: 10px;
 }
 
 header h1 {
@@ -111,8 +115,6 @@ header h2 {
   font-size: 3vw;
   margin: 10px 0 20px 0;
 }
-
-
 
 .intro, .contact {
   margin: 20px 0;
@@ -177,4 +179,28 @@ body.light {
   font-weight: 200;
   font-style: normal;
   font-size: 6vw;
+}
+
+.container-col {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: transparent;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex-grow: 1;
+}
+
+/* Navbar */
+
+#home-bar ul {
+  list-style-type: none;
+  text-decoration: none;
+}
+
+#home-bar li {
+  float: left
 }
