--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ p {
   text-align: left;
 }
 
-h2 {
+h2, h2 a {
   font-size: min(3vw, 15px);
   margin: 10px 0 20px 0;
 }
@@ -209,6 +209,7 @@ ul li a {
 .box-container {
   display: grid;
   gap: 1.5rem;
+  row-gap: 4.5rem;;
 
   overflow: hidden;
   border-radius: 1rem;
