--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,6 @@ img {
 }
 
 a {
-  color: var(--link-color);
   text-decoration: none;
 }
 
@@ -277,8 +276,8 @@ ul li a {
 
 /* Style for active navigation link */
 #home-bar .button-container li.active a {
-  font-weight: bold;
-  /* You can add other styles like color, text-decoration, etc. */
+  text-decoration-line: underline;
+  text-underline-offset: 10px;
 }
 
 /* About Page Specific Styles */
@@ -292,9 +291,8 @@ ul li a {
   font-size: 2em;
   margin-top: 40px;
   margin-bottom: 20px;
-  border-bottom: 2px solid var(--theme-accent-color, #444);
+  border-bottom: 1px solid var(--theme-text-color, #444);
   padding-bottom: 10px;
-  color: var(--theme-accent-color); /* Ensure h2 titles also use accent color */
 }
 
 .about-page p, .about-page li {
@@ -315,6 +313,8 @@ ul li a {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
   margin-bottom: 30px;
+opacity: 0.95;
+
 }
 
 .skill-item {
@@ -327,7 +327,6 @@ ul li a {
 .skill-item h3 {
   font-size: 1.2em;
   margin-bottom: 10px;
-  color: var(--theme-accent-color, #333);
 }
 
 .progress-bar-container {
@@ -341,7 +340,7 @@ ul li a {
 
 .progress-bar-fill {
   height: 100%;
-  background-color: var(--theme-accent-color, #007bff);
+  background-color: var(--theme-muted-color, );
   border-radius: 4px 0 0 4px; 
   text-align: right;
   padding-right: 5px; 
@@ -353,7 +352,6 @@ ul li a {
 .skill-item .skill-level-description {
   font-size: 0.9em;
   font-style: italic;
-  color: var(--theme-muted-color, #666);
 }
 
 /* CV Sections (Education & Experience) */
@@ -363,42 +361,16 @@ ul li a {
   margin-bottom: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0,0,0,0.08);
+  opacity: 0.95;
 }
 
 .cv-item h3 { /* Degree / Role */
   font-size: 1.4em;
   margin-bottom: 5px;
-  color: var(--theme-accent-color, #333);
-}
-
-.cv-item p em { /* Institution / Company & Period */
-  font-size: 1em;
-  font-style: normal; 
-  color: var(--theme-text-color); 
-  display: block; 
-  margin-bottom: 10px;
-}
-
-.cv-item ul {
-  list-style-type: disc;
-  padding-left: 20px;
-  margin-top: 10px;
 }
 
 /* CV Download Button */
-.cv-download-button {
-  display: inline-block;
-  padding: 12px 25px;
-  background-color: var(--theme-accent-color, #007bff);
-  color: var(--theme-button-text-color, #ffffff);
-  text-decoration: none;
+.with-border {
+  border: 1px solid var(--theme-text-color, #444);
   border-radius: 5px;
-  font-size: 1.1em;
-  transition: background-color 0.3s ease;
-  text-align: center;
-  margin-top: 10px;
-}
-
-.cv-download-button:hover {
-  background-color: var(--theme-accent-hover-color, #0056b3);
 }
